--- a/app/src/main/res/layout/activity_event0.xml
+++ b/app/src/main/res/layout/activity_event0.xml
@@ -68,9 +68,9 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
-        android:text="セリフ"
+        android:layout_width="189dp"
+        android:layout_height="58dp"
+        android:text="イベントを入力してね！"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
