--- a/app/src/main/res/layout/activity_task0.xml
+++ b/app/src/main/res/layout/activity_task0.xml
@@ -60,7 +60,7 @@
         android:id="@+id/textView"
         android:layout_width="90dp"
         android:layout_height="48dp"
-        android:text="セリフ"
+        android:text="タスクを登録してね！"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
