--- a/app/src/main/res/layout/activity_task4.xml
+++ b/app/src/main/res/layout/activity_task4.xml
@@ -72,7 +72,7 @@
         android:id="@+id/textView"
         android:layout_width="90dp"
         android:layout_height="48dp"
-        android:text="セリフ"
+        android:text="他のタスク予定はあるの？"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
