--- a/app/src/main/res/layout/activity_task0.xml
+++ b/app/src/main/res/layout/activity_task0.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/tsaknyan1" />
+        app:srcCompat="@drawable/tasukunyan_title" />
 
     <View
         android:id="@+id/opsq_view2"
@@ -34,7 +34,7 @@
         android:id="@+id/opsq_view"
         android:layout_width="344dp"
         android:layout_height="175dp"
-        android:background="#9CD8A8A8"
+        android:background="#D2FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.404"
@@ -58,16 +58,16 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
-        android:text="タスクを登録してね！"
+        android:layout_width="259dp"
+        android:layout_height="97dp"
+        android:text="タスク名を教えてにゃん！"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.165"
+        app:layout_constraintHorizontal_bias="0.401"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.719" />
+        app:layout_constraintVertical_bias="0.769" />
 
     <Button
         android:id="@+id/back_button"
