--- a/app/src/main/res/layout/activity_task4.xml
+++ b/app/src/main/res/layout/activity_task4.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.242"
-        app:srcCompat="@drawable/tsaknyan1" />
+        app:srcCompat="@drawable/tasukunyana7" />
 
     <View
         android:id="@+id/opsq_view2"
@@ -34,7 +34,7 @@
         android:id="@+id/opsq_view"
         android:layout_width="344dp"
         android:layout_height="175dp"
-        android:background="#9CD8A8A8"
+        android:background="#D2FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.404"
@@ -70,16 +70,16 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
-        android:text="他のタスク予定はあるの？"
+        android:layout_width="259dp"
+        android:layout_height="97dp"
+        android:text="他にタスクはあるにゃん？"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.165"
+        app:layout_constraintHorizontal_bias="0.276"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.719" />
+        app:layout_constraintVertical_bias="0.746" />
 
     <Button
         android:id="@+id/back_button"
