--- a/app/src/main/res/layout/activity_template.xml
+++ b/app/src/main/res/layout/activity_template.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.242"
-        app:srcCompat="@drawable/tsaknyan1" />
+        app:srcCompat="@drawable/tasukunyana6" />
 
     <View
         android:id="@+id/opsq_view2"
@@ -34,7 +34,7 @@
         android:id="@+id/opsq_view"
         android:layout_width="344dp"
         android:layout_height="175dp"
-        android:background="#9CD8A8A8"
+        android:background="#D2FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.404"
@@ -70,16 +70,16 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
-        android:text="セリフ"
+        android:layout_width="327dp"
+        android:layout_height="87dp"
+        android:text="作業スケジュール決めならタスク、作業できない日を入力するならイベントをおしてにゃん"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.165"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.719" />
+        app:layout_constraintVertical_bias="0.755" />
 
     <Button
         android:id="@+id/back_button"
